wolf_server_errors_v3.txt
    Blocking waiting for file lock on build directory
    Checking wolfsec v0.1.0 (/home/t4riq/Desktop/Rust/wolf_prowler/wolfsec)
warning: unnecessary qualification
   --> wolfsec/src/lib.rs:577:25
    |
577 |     pub authentication: auth::AuthConfig,
    |                         ^^^^^^^^^^^^^^^^
    |
    = note: requested on the command line with `-W unused-qualifications`
help: remove the unnecessary path segments
    |
577 -     pub authentication: auth::AuthConfig,
577 +     pub authentication: AuthConfig,
    |

error[E0599]: no method named `map_err` found for opaque type `impl std::future::Future<Output = std::result::Result<Vec<std::string::String>, WolfDbError>>` in the current scope
   --> wolfsec/src/infrastructure/persistence/wolf_db_alert_repository.rs:93:14
    |
 91 |           let keys = storage
    |  ____________________-
 92 | |             .list_keys(TABLE_ALERTS.to_string().into())
 93 | |             .map_err(|e| DomainError::Unexpected(e.to_string()))?;
    | |             -^^^^^^^ method not found in `impl std::future::Future<Output = std::result::Result<Vec<std::string::String>, WolfDbError>>`
    | |_____________|
    |
    |
   ::: /home/t4riq/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-util-0.3.31/src/future/try_future/mod.rs:308:8
    |
308 |       fn map_err<E, F>(self, f: F) -> MapErr<Self, F>
    |          ------- the method is available for `impl std::future::Future<Output = std::result::Result<Vec<std::string::String>, WolfDbError>>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: consider `await`ing on the `Future` and calling the method on its `Output`
    |
 93 |             .await.map_err(|e| DomainError::Unexpected(e.to_string()))?;
    |              ++++++
help: trait `TryFutureExt` which provides `map_err` is implemented but not in scope; perhaps you want to import it
    |
  1 + use libp2p::futures::TryFutureExt;
    |

error[E0282]: type annotations needed
  --> wolfsec/src/infrastructure/persistence/wolf_db_alert_repository.rs:93:23
   |
93 |             .map_err(|e| DomainError::Unexpected(e.to_string()))?;
   |                       ^                          - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
93 |             .map_err(|e: /* Type */| DomainError::Unexpected(e.to_string()))?;
   |                        ++++++++++++

error[E0599]: no method named `map_err` found for opaque type `impl std::future::Future<Output = std::result::Result<Vec<std::string::String>, WolfDbError>>` in the current scope
   --> wolfsec/src/infrastructure/persistence/wolf_db_threat_repository.rs:92:14
    |
 90 |           let keys = storage
    |  ____________________-
 91 | |             .list_keys(TABLE_THREATS.to_string().into())
 92 | |             .map_err(|e| DomainError::Unexpected(e.to_string()))?;
    | |             -^^^^^^^ method not found in `impl std::future::Future<Output = std::result::Result<Vec<std::string::String>, WolfDbError>>`
    | |_____________|
    |
    |
   ::: /home/t4riq/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/futures-util-0.3.31/src/future/try_future/mod.rs:308:8
    |
308 |       fn map_err<E, F>(self, f: F) -> MapErr<Self, F>
    |          ------- the method is available for `impl std::future::Future<Output = std::result::Result<Vec<std::string::String>, WolfDbError>>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: consider `await`ing on the `Future` and calling the method on its `Output`
    |
 92 |             .await.map_err(|e| DomainError::Unexpected(e.to_string()))?;
    |              ++++++
help: trait `TryFutureExt` which provides `map_err` is implemented but not in scope; perhaps you want to import it
    |
  1 + use libp2p::futures::TryFutureExt;
    |

error[E0282]: type annotations needed
  --> wolfsec/src/infrastructure/persistence/wolf_db_threat_repository.rs:92:23
   |
92 |             .map_err(|e| DomainError::Unexpected(e.to_string()))?;
   |                       ^                          - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
92 |             .map_err(|e: /* Type */| DomainError::Unexpected(e.to_string()))?;
   |                        ++++++++++++

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `wolfsec` (lib) generated 1 warning
error: could not compile `wolfsec` (lib) due to 4 previous errors; 1 warning emitted
